--- a/BlueShore.html
+++ b/BlueShore.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="assets/css/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <header class="text-6xl">
+    <li >
+      <h1 >jgl diff</h1>
+    </li>
+  </header>
 </body>
 </html>
