--- a/BlueShoreAccueil.html
+++ b/BlueShoreAccueil.html
@@ -6,8 +6,9 @@
   <link href="assets/css/output.css" rel="stylesheet">
 </head>
 <body>
-  <header class="text-6xl">
+  <header class="flex flex-row bg-cyan-700 ">
     <li>
+      <Button class><Img src="./assets/images/list.svg"></Button>
       <h1>jgl diff</h1>
     </li>
   </header>
