--- a/BlueShoreAccueil.html
+++ b/BlueShoreAccueil.html
@@ -6,9 +6,9 @@
   <link href="assets/css/output.css" rel="stylesheet">
 </head>
 <body>
-  <header class="flex flex-row bg-cyan-700 ">
+  <header class="text-amber-50 flex flex-auto bg-cyan-700 ">
     <li>
-      <Button class><Img src="./assets/images/list.svg"></Button>
+      <Button class="colo"><Img src="./assets/images/list.svg"></Button>
       <h1>jgl diff</h1>
     </li>
   </header>
