--- a/BlueShoreAccueil.html
+++ b/BlueShoreAccueil.html
@@ -8,7 +8,7 @@
 <body>
   <header class="text-amber-50 flex flex-auto bg-cyan-700 ">
     <li>
-      <Button class="colo"><Img src="./assets/images/list.svg"></Button>
+      <Button class=""><Img src="./assets/images/list.svg"></Button>
       <h1>jgl diff</h1>
     </li>
   </header>
